--- a/iptables-save/handlers/main.yaml
+++ b/iptables-save/handlers/main.yaml
@@ -1,5 +1,9 @@
 ---
 
-- name: save iptables
-  ansible.builtin.shell:
-    cmd: iptables-save -f /etc/iptables/rules.v4 && ip6tables-save -f /etc/iptables/rules.v6
+- name: save iptables rules
+  ansible.builtin.command:
+    cmd: iptables-save -f /etc/iptables/rules.v4
+
+- name: save ip6tables rules
+  ansible.builtin.command:
+    cmd: ip6tables-save -f /etc/iptables/rules.v6
