--- a/iptables/tasks/main.yaml
+++ b/iptables/tasks/main.yaml
@@ -1,150 +1,14 @@
 ---
 
-- name: Install iptables
-  ansible.builtin.apt:
-    name:
-      - iptables
-      - iptables-persistent
-    state: "{{ 'latest' if apt_update_latest else 'present' }}"
-    update_cache: '{{ apt_update_cache }}'
-    cache_valid_time: '{{ apt_cache_valid_time }}'
-  notify: save iptables
-  tags:
-    - iptables
-    - update
+- name: Install iptables packages
+  include_tasks: install.yaml
 
-- name: Reset default policies and flush all rules
-  block:
-    - name: Set default policy to allow incoming traffic
-      ansible.builtin.iptables:
-        ip_version: '{{ item }}'
-        chain: INPUT
-        policy: ACCEPT
-      loop:
-        - ipv4
-        - ipv6
-      notify: save iptables
-
-    - name: Set default policy to allow forwarding traffic
-      ansible.builtin.iptables:
-        ip_version: '{{ item }}'
-        chain: FORWARD
-        policy: ACCEPT
-      loop:
-        - ipv4
-        - ipv6
-      notify: save iptables
-
-    - name: Set default policy to allow outgoing traffic
-      ansible.builtin.iptables:
-        ip_version: '{{ item }}'
-        chain: OUTPUT
-        policy: ACCEPT
-      loop:
-        - ipv4
-        - ipv6
-      notify: save iptables
-
-    - name: Flush all rules
-      ansible.builtin.iptables:
-        ip_version: '{{ item }}'
-        flush: true
-      loop:
-        - ipv4
-        - ipv6
-      notify: save iptables
+- name: Reset iptables rules (optional)
+  include_tasks: reset.yaml
   when: iptables_reset
-  tags: iptables
 
-- name: Allow incoming loopback traffic
-  ansible.builtin.iptables:
-    chain: INPUT
-    in_interface: lo
-    jump: ACCEPT
-  notify: save iptables
-  tags: iptables
+- name: Apply iptables rules
+  include_tasks: rules.yaml
 
-- name: Allow outgoing loopback traffic
-  ansible.builtin.iptables:
-    chain: OUTPUT
-    out_interface: lo
-    jump: ACCEPT
-  notify: save iptables
-  tags: iptables
-
-- name: Allow incoming established and related traffic
-  ansible.builtin.iptables:
-    chain: INPUT
-    ctstate:
-      - ESTABLISHED
-      - RELATED
-    jump: ACCEPT
-  notify: save iptables
-  tags: iptables
-
-- name: Allow outgoing established traffic
-  ansible.builtin.iptables:
-    chain: OUTPUT
-    ctstate: ESTABLISHED
-    jump: ACCEPT
-  notify: save iptables
-  tags: iptables
-
-- name: Drop invalid packets
-  ansible.builtin.iptables:
-    chain: '{{ item }}'
-    ctstate: INVALID
-    jump: DROP
-  loop:
-    - INPUT
-    - FORWARD
-  notify: save iptables
-  tags: iptables
-
-- name: Allow incoming and outgoing SSH traffic
-  ansible.builtin.iptables:
-    chain: '{{ item }}'
-    protocol: tcp
-    destination_port: ssh
-    ctstate:
-      - NEW
-      - ESTABLISHED
-    jump: ACCEPT
-  loop:
-    - INPUT
-    - OUTPUT
-  notify: save iptables
-  tags: iptables
-
-- name: Set default policy for outgoing traffic
-  ansible.builtin.iptables:
-    ip_version: '{{ item }}'
-    chain: OUTPUT
-    policy: '{{ iptables_policy_output }}'
-  loop:
-    - ipv4
-    - ipv6
-  notify: save iptables
-  tags: iptables
-
-- name: Set default policy for forwarding traffic
-  ansible.builtin.iptables:
-    ip_version: '{{ item }}'
-    chain: FORWARD
-    policy: '{{ iptables_policy_forward }}'
-  loop:
-    - ipv4
-    - ipv6
-  notify: save iptables
-  tags: iptables
-
-- name: Set default policy for incoming traffic
-  ansible.builtin.iptables:
-    ip_version: '{{ item }}'
-    chain: INPUT
-    policy: '{{ iptables_policy_input }}'
-  loop:
-    - ipv4
-    - ipv6
-  notify: save iptables
-  tags: iptables
+- name: Set default chain policies
+  include_tasks: policies.yaml
