refactor(keepalived): improve readability and reliability of role tasks

--- a/keepalived/tasks/main.yaml
+++ b/keepalived/tasks/main.yaml
@@ -1,5 +1,18 @@
 ---
 
+- name: Validate VRRP instance configuration
+  ansible.builtin.assert:
+    that:
+      - item.name is defined and item.name | trim != ''
+      - item.state is defined and item.state in ['MASTER', 'BACKUP']
+      - item.interface is defined and item.interface | trim != ''
+      - item.priority is defined and (item.priority | int >= 0 and item.priority | int <= 255)
+      - item.virtual_ipaddress is defined and item.virtual_ipaddress | trim != ''
+    fail_msg: VRRP instance is missing required fields or has invalid values.
+    quiet: true
+  loop: '{{ keepalived_vrrp_instances | default([], true) }}'
+  tags: keepalived
+
 - name: Install Keepalived
   ansible.builtin.apt:
     name: keepalived
@@ -8,41 +21,38 @@
     cache_valid_time: '{{ apt_cache_valid_time }}'
   tags: keepalived
 
-- name: Enable Keepalived on boot
+- name: Enable Keepalived service on boot
   ansible.builtin.systemd_service:
     name: keepalived.service
     enabled: true
   tags: keepalived
 
-- name: Create configuration directory
+- name: Ensure Keepalived configuration directory exists
   ansible.builtin.file:
-    name: /etc/keepalived/conf.d
+    path: /etc/keepalived/conf.d
     state: directory
     owner: root
     group: root
-    mode: 0755
+    mode: '0755'
   tags: keepalived
 
-- name: Create configuration
+- name: Deploy Keepalived configuration
   ansible.builtin.copy:
     src: keepalived.conf
     dest: /etc/keepalived/keepalived.conf
     group: root
     owner: root
-    mode: 0644
+    mode: '0644'
   notify: restart keepalived.service
   tags: keepalived
 
-- name: Create VRRP instances
+- name: Deploy VRRP instance configurations
   ansible.builtin.template:
     src: vrrp.conf.j2
     dest: '/etc/keepalived/conf.d/vrrp_{{ item.name }}.conf'
     group: root
     owner: root
-    mode: 0644
-  when:
-    - item.name
-    - item.virtual_ipaddress
+    mode: '0644'
   loop: '{{ keepalived_vrrp_instances | default([], true) }}'
   notify: restart keepalived.service
   tags: keepalived
