refactor(netplan): improve readability and reliability

--- a/netplan/tasks/main.yaml
+++ b/netplan/tasks/main.yaml
@@ -1,42 +1,42 @@
 ---
 
-- name: Create directory
+- name: Create netplan directory
   ansible.builtin.file:
-    name: /etc/netplan
+    path: /etc/netplan
     state: directory
     owner: root
     group: root
-    mode: 0755
+    mode: '0755'
   tags: netplan
 
-- name: Create configuration
+- name: Deploy netplan configuration
   ansible.builtin.template:
     src: netplan.yaml.j2
     dest: /etc/netplan/99-ansible.yaml
-    group: root
     owner: root
-    mode: 0600
+    group: root
+    mode: '0600'
   notify: apply netplan
   tags: netplan
 
-- name: Create networkd override configuration
+- name: Configure networkd overrides for interfaces
   block:
-    - name: Create networkd directory
+    - name: Create networkd override directory
       ansible.builtin.file:
-        name: '/etc/systemd/network/10-netplan-{{ item.interface }}.network.d'
+        path: '/etc/systemd/network/10-netplan-{{ item.interface }}.network.d'
         state: "{{ 'directory' if item.networkd_overrides is defined else 'absent' }}"
         owner: root
         group: root
-        mode: 0755
+        mode: '0755'
       loop: '{{ netplan_ethernets }}'
 
-    - name: Create networkd configuration
+    - name: Deploy networkd override configuration
       ansible.builtin.template:
         src: network.conf.j2
-        dest: /etc/systemd/network/10-netplan-{{ item.interface }}.network.d/10-netplan-{{ item.interface }}.network.conf
-        group: root
+        dest: '/etc/systemd/network/10-netplan-{{ item.interface }}.network.d/10-netplan-{{ item.interface }}.network.conf'
         owner: root
-        mode: 0644
+        group: root
+        mode: '0644'
       vars:
         ipv6_accept_ra: '{{ item.networkd_overrides.ipv6_accept_ra }}'
       when: item.networkd_overrides is defined
