--- a/pihole/tasks/main.yaml
+++ b/pihole/tasks/main.yaml
@@ -3,20 +3,20 @@
 - name: Get stats of Pi-hole binary
   ansible.builtin.stat:
     path: /usr/local/bin/pihole
-  register: pihole_binary
+  register: _pihole_binary
   tags:
     - pihole
     - update
 
-- name: Create directory
+- name: Create Pi-hole directory
   ansible.builtin.file:
-    name: /etc/pihole
+    path: /etc/pihole
     state: directory
   tags: pihole
 
-- name: Create configuration file
+- name: Create Pi-hole configuration file
   ansible.builtin.file:
-    name: /etc/pihole/pihole.toml
+    path: /etc/pihole/pihole.toml
     state: touch
     access_time: preserve
     modification_time: preserve
@@ -24,22 +24,23 @@
 
 - name: Install Pi-hole
   ansible.builtin.shell: 'curl -sSL https://install.pi-hole.net | PIHOLE_SKIP_OS_CHECK={{ pihole_skip_os_check | to_json }} bash /dev/stdin --unattended'
-  register: pihole_install
-  when: not pihole_binary.stat.exists | default(false)
-  failed_when: pihole_install.stderr_lines | difference(pihole_install_ignore_errors) | length
+  register: _pihole_install
+  when: not _pihole_binary.stat.exists | default(false)
+  failed_when: _pihole_install.stderr_lines | difference(pihole_install_ignore_errors) | length
   tags: pihole
 
 - name: Update Pi-hole
-  ansible.builtin.command: pihole updatePihole
-  register: pihole_update
-  changed_when: '"update available" in pihole_update.stdout'
-  when: pihole_binary.stat.exists | default(false)
+  ansible.builtin.command:
+    cmd: pihole updatePihole
+  register: _pihole_update
+  changed_when: '"update available" in _pihole_update.stdout'
+  when: _pihole_binary.stat.exists | default(false)
   notify: restart pihole-FTL.service
   tags:
     - pihole
     - update
 
-- name: Apply configuration options
+- name: Apply Pi-hole configuration
   include_tasks: config.yaml
   loop: '{{ pihole_config | default([], true) }}'
   no_log: true
