--- a/reboot/tasks/main.yaml
+++ b/reboot/tasks/main.yaml
@@ -3,27 +3,26 @@
 - name: Get stats of reboot-required
   ansible.builtin.stat:
     path: /var/run/reboot-required
-  register: reboot_required
+  register: _reboot_required
   when: not reboot_always
   tags:
     - reboot
     - update
 
-- name: Flush handlers
+- name: Flush pending handlers before reboot
   ansible.builtin.meta: flush_handlers
-  when: reboot_always or reboot_required.stat.exists
+  when: reboot_always or _reboot_required.stat.exists
   tags:
     - reboot
     - update
 
-- name: Reboot host
+- name: Reboot host if required
   ansible.builtin.reboot:
-    msg: Reboot initiated by Ansible
+    msg: Host reboot initiated by Ansible
     reboot_timeout: 600
-    pre_reboot_delay: 0
     post_reboot_delay: 30
-    test_command: whoami
-  when: reboot_always or reboot_required.stat.exists
+    test_command: uptime
+  when: reboot_always or _reboot_required.stat.exists
   tags:
     - reboot
     - update
