--- a/unbound/tasks/main.yaml
+++ b/unbound/tasks/main.yaml
@@ -10,53 +10,56 @@
     - unbound
     - update
 
-- name: Create configuration
+- name: Deploy Unbound configuration
   ansible.builtin.template:
     src: unbound.conf.j2
     dest: /etc/unbound/unbound.conf.d/ansible.conf
     owner: root
     group: root
-    mode: 0644
-  register: unbound_configuration
+    mode: '0644'
+  register: _unbound_configuration
   tags: unbound
 
-- name: Check configuration
-  ansible.builtin.command: unbound-checkconf /etc/unbound/unbound.conf.d/ansible.conf
-  when: unbound_configuration is changed
-  notify: restart unbound.service
-  tags: unbound
-
-- name: Create log file
+- name: Ensure Unbound log file
   block:
-    - name: Create log directory
+    - name: Create Unbound log directory
       ansible.builtin.file:
-        name: '{{ unbound_logfile | dirname }}'
+        path: '{{ unbound_logfile | dirname }}'
         state: directory
         owner: root
         group: root
+        mode: '0755'
 
-    - name: Create logfile
+    - name: Create Unbound logfile
       ansible.builtin.file:
         path: '{{ unbound_logfile }}'
         state: touch
         owner: unbound
         group: unbound
-        mode: 0640
+        mode: '0640'
         access_time: preserve
         modification_time: preserve
 
-    - name: Add logfile to /etc/apparmor.d/local/usr.sbin.unbound
+    - name: Add logfile to AppArmor profile
       ansible.builtin.lineinfile:
         path: /etc/apparmor.d/local/usr.sbin.unbound
         line: '{{ unbound_logfile }} rw,'
         state: present
         search_string: '{{ unbound_logfile }}'
-      register: unbound_apparmor
+      register: _unbound_apparmor
 
-    - name: Load AppArmor profile
-      ansible.builtin.command: apparmor_parser -r /etc/apparmor.d/usr.sbin.unbound
-      when: unbound_apparmor is changed
+    - name: Reload AppArmor profile if logfile added
+      ansible.builtin.command:
+        cmd: apparmor_parser -r /etc/apparmor.d/usr.sbin.unbound
+      when: _unbound_apparmor.changed
       notify: restart apparmor.service
   when: unbound_logfile
+  notify: restart unbound.service
+  tags: unbound
+
+- name: Validate Unbound configuration
+  ansible.builtin.command:
+    cmd: unbound-checkconf /etc/unbound/unbound.conf.d/ansible.conf
+  when: _unbound_configuration.changed
   notify: restart unbound.service
   tags: unbound
