--- a/time/tasks/main.yaml
+++ b/time/tasks/main.yaml
@@ -2,14 +2,14 @@
 
 - name: Set system timezone
   community.general.timezone:
-    name: '{{ timezone }}'
+    name: "{{ timezone }}"
   tags: time
 
 - name: Configure NTP server in timesyncd
   ansible.builtin.lineinfile:
     dest: /etc/systemd/timesyncd.conf
-    regexp: '^NTP='
-    line: 'NTP={{ ntp }}'
+    regexp: "^NTP="
+    line: "NTP={{ ntp }}"
     state: present
   notify: restart timesyncd.service
   tags: time
@@ -17,8 +17,8 @@
 - name: Configure fallback NTP server in timesyncd
   ansible.builtin.lineinfile:
     dest: /etc/systemd/timesyncd.conf
-    regexp: '^FallbackNTP='
-    line: 'FallbackNTP={{ ntp_fallback }}'
+    regexp: "^FallbackNTP="
+    line: "FallbackNTP={{ ntp_fallback }}"
     state: present
   when: ntp_fallback
   notify: restart timesyncd.service
