--- a/postgresql/tasks/main.yaml
+++ b/postgresql/tasks/main.yaml
@@ -6,8 +6,8 @@
       - ca-certificates
       - curl
     state: present
-    update_cache: '{{ apt_update_cache }}'
-    cache_valid_time: '{{ apt_cache_valid_time }}'
+    update_cache: "{{ apt_update_cache }}"
+    cache_valid_time: "{{ apt_cache_valid_time }}"
   tags: postgresql
 
 - name: Ensure keyring directory exists
@@ -16,7 +16,7 @@
     state: directory
     owner: root
     group: root
-    mode: '0755'
+    mode: "0755"
   tags: postgresql
 
 - name: Download official PostgreSQL GPG key
@@ -25,7 +25,7 @@
     dest: /etc/apt/keyrings/postgresql.asc
     owner: root
     group: root
-    mode: '0644'
+    mode: "0644"
     force: false
   tags: postgresql
 
@@ -36,19 +36,19 @@
       aarch64: arm64
       ppc64le: ppc64el
   ansible.builtin.set_fact:
-    _apt_arch: '{{ arch_map[ansible_architecture] | default(ansible_architecture) }}'
+    _apt_arch: "{{ arch_map[ansible_architecture] | default(ansible_architecture) }}"
   tags: postgresql
 
 - name: Add PostgreSQL repository
   ansible.builtin.apt_repository:
-    repo: 'deb [arch={{ _apt_arch }} signed-by=/etc/apt/keyrings/postgresql.asc] https://apt.postgresql.org/pub/repos/apt {{ ansible_distribution_release }}-pgdg main'
+    repo: "deb [arch={{ _apt_arch }} signed-by=/etc/apt/keyrings/postgresql.asc] https://apt.postgresql.org/pub/repos/apt {{ ansible_distribution_release }}-pgdg main"
     state: present
     filename: pgdg
   tags: postgresql
 
 - name: Install PostgreSQL
   ansible.builtin.apt:
-    name: 'postgresql-{{ postgresql_version }}'
+    name: "postgresql-{{ postgresql_version }}"
     state: "{{ 'latest' if apt_update_latest else 'present' }}"
     update_cache: true
   tags:
