--- a/netplan/tasks/main.yaml
+++ b/netplan/tasks/main.yaml
@@ -6,7 +6,7 @@
     state: directory
     owner: root
     group: root
-    mode: '0755'
+    mode: "0755"
   tags: netplan
 
 - name: Deploy netplan configuration
@@ -15,7 +15,7 @@
     dest: /etc/netplan/99-ansible.yaml
     owner: root
     group: root
-    mode: '0600'
+    mode: "0600"
   notify: apply netplan
   tags: netplan
 
@@ -23,24 +23,24 @@
   block:
     - name: Create networkd override directory
       ansible.builtin.file:
-        path: '/etc/systemd/network/10-netplan-{{ item.interface }}.network.d'
+        path: "/etc/systemd/network/10-netplan-{{ item.interface }}.network.d"
         state: "{{ 'directory' if item.networkd_overrides is defined else 'absent' }}"
         owner: root
         group: root
-        mode: '0755'
-      loop: '{{ netplan_ethernets }}'
+        mode: "0755"
+      loop: "{{ netplan_ethernets }}"
 
     - name: Deploy networkd override configuration
       ansible.builtin.template:
         src: network.conf.j2
-        dest: '/etc/systemd/network/10-netplan-{{ item.interface }}.network.d/10-netplan-{{ item.interface }}.network.conf'
+        dest: "/etc/systemd/network/10-netplan-{{ item.interface }}.network.d/10-netplan-{{ item.interface }}.network.conf"
         owner: root
         group: root
-        mode: '0644'
+        mode: "0644"
       vars:
-        ipv6_accept_ra: '{{ item.networkd_overrides.ipv6_accept_ra }}'
+        ipv6_accept_ra: "{{ item.networkd_overrides.ipv6_accept_ra }}"
       when: item.networkd_overrides is defined
-      loop: '{{ netplan_ethernets }}'
+      loop: "{{ netplan_ethernets }}"
   when: netplan_renderer == 'networkd'
   notify: restart networkd.service
   tags: netplan
