--- a/ssh/defaults/main.yaml
+++ b/ssh/defaults/main.yaml
@@ -8,16 +8,13 @@ ssh_authorized_keys:
 ssh_authorized_keys_exclusive: false
 
 # Specifies the host key signature algorithms that the client wants to use in order of preference.
-# Refer to https://man7.org/linux/man-pages/man5/ssh_config.5.html and https://www.sshaudit.com
-ssh_host_key_algorithms: sk-ssh-ed25519-cert-v01@openssh.com,ssh-ed25519-cert-v01@openssh.com,rsa-sha2-512-cert-v01@openssh.com,rsa-sha2-256-cert-v01@openssh.com,sk-ssh-ed25519@openssh.com,ssh-ed25519,rsa-sha2-512,rsa-sha2-256
+ssh_host_key_algorithms:
 
 # Specifies the available KEX (Key Exchange) algorithms.
-# Refer to https://man7.org/linux/man-pages/man5/ssh_config.5.html and https://www.sshaudit.com
-ssh_kex_algorithms: sntrup761x25519-sha512@openssh.com,gss-curve25519-sha256-,curve25519-sha256,curve25519-sha256@libssh.org,diffie-hellman-group18-sha512,diffie-hellman-group-exchange-sha256,gss-group16-sha512-,diffie-hellman-group16-sha512
+ssh_kex_algorithms:
 
 # Specifies the MAC (message authentication code) algorithms in order of preference.
-# Refer to https://man7.org/linux/man-pages/man5/ssh_config.5.html and https://www.sshaudit.com
-ssh_macs: hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com
+ssh_macs:
 
 # Password authentication is allowed.
 ssh_password_authentication: false
