--- a/keepalived/tasks/main.yaml
+++ b/keepalived/tasks/main.yaml
@@ -10,15 +10,15 @@
       - item.virtual_ipaddress is defined and item.virtual_ipaddress | trim != ''
     fail_msg: VRRP instance is missing required fields or has invalid values.
     quiet: true
-  loop: '{{ keepalived_vrrp_instances | default([], true) }}'
+  loop: "{{ keepalived_vrrp_instances | default([], true) }}"
   tags: keepalived
 
 - name: Install Keepalived
   ansible.builtin.apt:
     name: keepalived
     state: "{{ 'latest' if apt_update_latest else 'present' }}"
-    update_cache: '{{ apt_update_cache }}'
-    cache_valid_time: '{{ apt_cache_valid_time }}'
+    update_cache: "{{ apt_update_cache }}"
+    cache_valid_time: "{{ apt_cache_valid_time }}"
   tags: keepalived
 
 - name: Enable Keepalived service on boot
@@ -33,7 +33,7 @@
     state: directory
     owner: root
     group: root
-    mode: '0755'
+    mode: "0755"
   tags: keepalived
 
 - name: Deploy Keepalived configuration
@@ -42,17 +42,17 @@
     dest: /etc/keepalived/keepalived.conf
     group: root
     owner: root
-    mode: '0644'
+    mode: "0644"
   notify: restart keepalived.service
   tags: keepalived
 
 - name: Deploy VRRP instance configurations
   ansible.builtin.template:
     src: vrrp.conf.j2
-    dest: '/etc/keepalived/conf.d/vrrp_{{ item.name }}.conf'
+    dest: "/etc/keepalived/conf.d/vrrp_{{ item.name }}.conf"
     group: root
     owner: root
-    mode: '0644'
-  loop: '{{ keepalived_vrrp_instances | default([], true) }}'
+    mode: "0644"
+  loop: "{{ keepalived_vrrp_instances | default([], true) }}"
   notify: restart keepalived.service
   tags: keepalived
