--- a/docker/tasks/main.yaml
+++ b/docker/tasks/main.yaml
@@ -20,8 +20,8 @@
       - ca-certificates
       - curl
     state: present
-    update_cache: '{{ apt_update_cache }}'
-    cache_valid_time: '{{ apt_cache_valid_time }}'
+    update_cache: "{{ apt_update_cache }}"
+    cache_valid_time: "{{ apt_cache_valid_time }}"
   tags: docker
 
 - name: Ensure keyring directory exists
@@ -30,7 +30,7 @@
     state: directory
     owner: root
     group: root
-    mode: '0755'
+    mode: "0755"
   tags: docker
 
 - name: Download official Docker GPG key
@@ -39,7 +39,7 @@
     dest: /etc/apt/keyrings/docker.asc
     owner: root
     group: root
-    mode: '0644'
+    mode: "0644"
     force: false
   tags: docker
 
@@ -52,12 +52,12 @@
       armv6l: armhf
       ppc64le: ppc64el
   ansible.builtin.set_fact:
-    apt_arch: '{{ arch_map[ansible_architecture] | default(ansible_architecture) }}'
+    apt_arch: "{{ arch_map[ansible_architecture] | default(ansible_architecture) }}"
   tags: docker
 
 - name: Add Docker repository
   ansible.builtin.apt_repository:
-    repo: 'deb [arch={{ apt_arch }} signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable'
+    repo: "deb [arch={{ apt_arch }} signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
     state: present
     filename: docker
   tags: docker
@@ -78,7 +78,7 @@
 
 - name: Enable Docker services on boot
   ansible.builtin.systemd_service:
-    name: '{{ item }}'
+    name: "{{ item }}"
     state: started
     enabled: true
   loop:
