--- a/certificate/tasks/main.yaml
+++ b/certificate/tasks/main.yaml
@@ -9,29 +9,29 @@
 
 - name: Create project directory
   ansible.builtin.file:
-    name: '{{ certificate_path }}'
+    name: "{{ certificate_path }}"
     state: directory
-    owner: '{{ certificate_owner }}'
-    group: '{{ certificate_group }}'
-    mode: '0755'
+    owner: "{{ certificate_owner }}"
+    group: "{{ certificate_group }}"
+    mode: "0755"
   tags: certificate
 
 - name: Generate OpenSSL private key
   community.crypto.openssl_privatekey:
-    path: '{{ certificate_path }}/server.key'
+    path: "{{ certificate_path }}/server.key"
     state: present
-    owner: '{{ certificate_owner }}'
-    group: '{{ certificate_group }}'
-    mode: '0400'
+    owner: "{{ certificate_owner }}"
+    group: "{{ certificate_group }}"
+    mode: "0400"
   tags: certificate
 
 - name: Generate self-signed certificate
   community.crypto.x509_certificate:
-    path: '{{ certificate_path }}/server.crt'
-    privatekey_path: '{{ certificate_path }}/server.key'
+    path: "{{ certificate_path }}/server.crt"
+    privatekey_path: "{{ certificate_path }}/server.key"
     provider: selfsigned
     state: present
-    owner: '{{ certificate_owner }}'
-    group: '{{ certificate_group }}'
-    mode: '0400'
+    owner: "{{ certificate_owner }}"
+    group: "{{ certificate_group }}"
+    mode: "0400"
   tags: certificate
