--- a/docker_compose/tasks/files.yaml
+++ b/docker_compose/tasks/files.yaml
@@ -9,10 +9,10 @@
 
 - name: Create directory
   ansible.builtin.file:
-    path: '{{ docker_compose_path }}/{{ item.dest }}'
+    path: "{{ docker_compose_path }}/{{ item.dest }}"
     state: directory
-    owner: '{{ item.owner | default(docker_compose_owner, true) }}'
-    group: '{{ item.group | default(docker_compose_group, true) }}'
+    owner: "{{ item.owner | default(docker_compose_owner, true) }}"
+    group: "{{ item.group | default(docker_compose_group, true) }}"
     mode: "{{ item.mode | default('0755', true) }}"
   when: item.src is not defined and item.content is not defined and item.template is not defined
   notify: docker compose recreate
@@ -20,10 +20,10 @@
 
 - name: Copy file or directory
   ansible.builtin.copy:
-    src: '{{ item.src }}'
-    dest: '{{ docker_compose_path }}/{{ item.dest }}'
-    owner: '{{ item.owner | default(docker_compose_owner, true) }}'
-    group: '{{ item.group | default(docker_compose_group, true) }}'
+    src: "{{ item.src }}"
+    dest: "{{ docker_compose_path }}/{{ item.dest }}"
+    owner: "{{ item.owner | default(docker_compose_owner, true) }}"
+    group: "{{ item.group | default(docker_compose_group, true) }}"
     mode: "{{ item.mode | default('preserve', true) }}"
     force: true
   when: item.src is defined
@@ -32,10 +32,10 @@
 
 - name: Create file from content
   ansible.builtin.copy:
-    content: '{{ item.content }}'
-    dest: '{{ docker_compose_path }}/{{ item.dest }}'
-    owner: '{{ item.owner | default(docker_compose_owner, true) }}'
-    group: '{{ item.group | default(docker_compose_group, true) }}'
+    content: "{{ item.content }}"
+    dest: "{{ docker_compose_path }}/{{ item.dest }}"
+    owner: "{{ item.owner | default(docker_compose_owner, true) }}"
+    group: "{{ item.group | default(docker_compose_group, true) }}"
     mode: "{{ item.mode | default('0400', true) }}"
     force: true
   when: item.content is defined
@@ -44,10 +44,10 @@
 
 - name: Create file from template
   ansible.builtin.template:
-    src: '{{ item.template }}'
-    dest: '{{ docker_compose_path }}/{{ item.dest }}'
-    owner: '{{ item.owner | default(docker_compose_owner, true) }}'
-    group: '{{ item.group | default(docker_compose_group, true) }}'
+    src: "{{ item.template }}"
+    dest: "{{ docker_compose_path }}/{{ item.dest }}"
+    owner: "{{ item.owner | default(docker_compose_owner, true) }}"
+    group: "{{ item.group | default(docker_compose_group, true) }}"
     mode: "{{ item.mode | default('0400', true) }}"
     force: true
   when: item.template is defined
